--- a/ahmad.html
+++ b/ahmad.html
@@ -15,7 +15,7 @@
         
           <div class="story-header">
             <a class="close">
-              &larr;  
+              <span style="color:blue">○</span>  
             <span class="name"></span>
             
           </a>
