--- a/ahmad.html
+++ b/ahmad.html
@@ -27,7 +27,7 @@
   </head>
 
   <div id="main-story"></div>
-  <iframe src='https://my.spline.design/tableundermyfeetgraphicslices-5054e48e34f95c69e981f0eca79f2cd3/' frameborder='0' width='100%' height='100%'></iframe>
+  <img class="story-img" src='./img/220314-Karte-Front-dots-lines-text.jpg' frameborder='0' width='100%' height='100%'>
 
 
 
