Added Audio controls

--- a/ahmad.html
+++ b/ahmad.html
@@ -17,7 +17,10 @@
             <a class="close">
               <span style="color:blue">○</span>  
             <span class="name"></span>
-            
+            <audio controls>
+              <source src="horse.mp3" type="audio/mpeg">
+              Your browser does not support the audio tag.
+            </audio> 
           </a>
           </div>
           <br/>
