white circle and maps

--- a/ahmad.html
+++ b/ahmad.html
@@ -26,7 +26,7 @@
   </head>
 
   <div id="main-story"></div>
-  <img class="story-img" src='./img/220314-Karte-Front-dots-lines-text.jpg' frameborder='0' width='100%' height='100%'>
+  <img class="story-img" src='./img/Map-Ahmad-01.png' frameborder='0' width='100%' height='100%'>
 
 
 
