--- a/diya.html
+++ b/diya.html
@@ -15,7 +15,7 @@
         
           <div class="story-header">
             <a class="close">
-              &larr;  
+              <span style="color:blue">○</span>  
             <span class="name"></span>
             
           </a>
@@ -27,7 +27,7 @@
   </head>
 
   <div id="main-story"></div>
-  <iframe src='https://my.spline.design/tableundermyfeetgraphicslices-5054e48e34f95c69e981f0eca79f2cd3/' frameborder='0' width='100%' height='100%'></iframe>
+  <img class="story-img" src='./img/Map-Diya-01.png' frameborder='0' width='100%' height='100%'>
 
 
 
