--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
           <div class="story-header">
             <a class="close">
-              &rarr;
+              <span style="color:blue">●</span>
             <span class="name"></span>
           </a>
           </div>
