--- a/ahmad.html
+++ b/ahmad.html
@@ -44,6 +44,9 @@
         instance.querySelector(".content").innerHTML = story.content;
         instance.querySelector(".story-wrapper").id = story.id;
         story.flag = "true";
+        if((story.id % 2) == 1 ){
+          instance.querySelector("#\\3"+story.id).style.backgroundColor = "#fafafa";
+        }
         // Append the instance ot the DOM
         document.getElementById("main-story").appendChild(instance);
         var clsbtn = document
