Fix for index page to commence at top 0

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </head>
 
   <div class="loader"></div>
-  <div id="main-story"></div>
-  <div id="other-story"></div>
+  <div id="main-story" class="top"></div>
+  <div id="other-story" class="top"></div>
 
 
   <script>
