--- a/andrew.html
+++ b/andrew.html
@@ -25,7 +25,7 @@
     </template>
   </head>
 
-  <div id="main-story"></div>
+  <div id="main-story" class="full"></div>
   <img class="story-img" src='./img/Map-Andrew-01.png' frameborder='0' width='100%' height='100%'>
 
 
