--- a/maria.html
+++ b/maria.html
@@ -27,7 +27,7 @@
     </template>
   </head>
 
-  <div id="main-story"></div>
+  <div id="main-story" class="full"></div>
   <img class="story-img" src='./img/Map-Maria-01.png' frameborder='0' width='100%' height='100%'>
 
 
